--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 </div>
 
 <!-- canvas auxiliar para poder capturar una imagen del video y poderlo guardar despues -->
-<canvas id="canva_fotografia" width="1366" height="768" style="display: none"></canvas>
+<canvas id="canva_fotografia" style="display: none"></canvas>
 <!-- contendra el listado de fotos que se capturaron del video -->
 <div id="contenedor_fotos_video">
     <label>Capturas de fotos del video</label>
